vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__scalar_types__tests__enumeration_type_declaration.snap
---
source: vhdl_syntax/src/parser/productions/scalar_types.rs
expression: "to_test_text(Parser::type_declaration, \"type enum_t is (A);\")"
---
FullTypeDeclaration
  Keyword(Type)
  Identifier 'enum_t'
  Keyword(Is)
  EnumerationTypeDefinition
    ParenthesizedEnumerationTypeDefinitionItems
      LeftPar
      EnumerationTypeDefinitionItems
        Identifier 'A'
      RightPar
  SemiColon
